<resources>
    <string name="app_name">GUC Planner</string>
    <string name="action_settings">Settings</string>
    <string name="logoContentDescription">logo</string>
    <string name="emailInputHint">GUC Email</string>
    <string name="passwordInputHint">Password</string>
    <string name="nameInputHint">Full Name</string>
    <string name="loginBtnText">Login</string>
    <string name="signupText">Signup</string>
    <string name="password_login_error">A password is required</string>
    <string name="password_signup_error">A password is required</string>
    <string name="login_email_error">Must be a valid GUC email</string>
    <string name="email_signup_error">Must be a valid GUC email</string>
    <string name="loginProgressDialogMessage">Authenticating...</string>
    <string name="title_activity_schedule">Schedule</string>
    <string name="authTokenKey" translatable="false">authToken</string>
    <string name="authTokenCreationDateKey" translatable="false">authTokenCreatedAt</string>
    <string name="resendVerifyText">Resend verification</string>
    <string name="title_activity_signup">Signup</string>
    <string name="resendVerificationDialogTitle">Resend Verification</string>
    <string name="noInternetText">No internet connection</string>
    <string name="name_signup_error">Please enter your name</string>
    <string name="applicationError">Application Error</string>
    <string name="resend">Resend</string>
    <string name="cancel">Cancel</string>
    <string name="signupTitle">Create Account</string>
    <string name="createAccountText">Create</string>
    <string name="signupProgressDialogMessage">Creating Account....</string>
    <string name="signup_error_dialog_title">Error</string>
    <string name="confirm">Confirm</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="welcome_string">Welcome to GUCLINK, your account has been successfully created and a verification email was sent to your guc email with instructions on how to activate it. You need to activate your account before using any of GUCLINK\'s services</string>
    <string name="currentUserSPKey">CURRENT_USER</string>
    <string name="gucCredsKey">GUC_ORGANIZER_CREDS</string>
</resources>
