<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="in.guclink.www.organizer.LoginActivity"
    tools:showIn="@layout/activity_login">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dp"
        >
    
        <ImageView
            android:src="@mipmap/ic_launcher"
            android:layout_width="200dp"
            android:layout_height="169dp"
            android:layout_gravity="center_horizontal"
            android:scaleType="fitXY"
            android:contentDescription="@string/logoContentDescription" />

        <!-- TITLE -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textSize="25sp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/colorAccent"
            android:textStyle="italic"
            fontPath="fonts/Montserrat-Regular.ttf"
            tools:ignore="MissingPrefix" />

        <!-- Email -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="8dp"
            android:textColorHint="@color/colorPrimaryDark"

            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input_email"
                android:inputType="textEmailAddress"
                android:hint="@string/emailInputHint"
                android:textColorHint="@color/colorPrimaryDark"
                android:textColor="@color/colorBlack" />
        </android.support.design.widget.TextInputLayout>
        <!-- Password-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColorHint="@color/colorPrimaryDark"

            >

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColorHint="@color/colorPrimaryDark"
                android:hint="@string/passwordInputHint"
                android:textColor="@color/colorBlack"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_login"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:padding="12dp"
            android:text="@string/loginBtnText"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:onClick="buttonClickLogin"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signupText"
                android:textColor="@color/colorBlack"
                android:layout_weight="1"
                android:onClick="buttonClickSignup"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/resendVerifyText"
                android:textColor="@color/colorBlack"
                android:onClick="buttonClickResendVerify"
                />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
